# ratmic

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-24-ratmic-effects.md  2026-05-24-ratmic-foundation.md  2026-05-24-ratmic-presets.md  2026-05-24-ratmic-ui-shell.md
docs/superpowers/specs/: 2026-05-24-ratmic-design.md  2026-05-24-ratmic-ui-modernization-design.md
src/: App.svelte  app.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  settings.rs
src-tauri/src/audio/: devices.rs  engine.rs  format.rs  input_stream.rs  meters.rs  mod.rs  output_backend.rs  resampler.rs  ring_buffer.rs  system_output.rs
src-tauri/src/effects/: bandpass.rs  biquad.rs  bitcrusher.rs  chain.rs  clipper.rs  crossfade.rs  gain.rs  limiter.rs  mod.rs  noise.rs  noise_gate.rs  packet_loss.rs  registry.rs
src-tauri/src/hotkeys/: mod.rs
src-tauri/src/presets/: builtin.rs  mod.rs  schema.rs  user.rs
src-tauri/src/presets/builtin_json/: 2007-skype-call.json  blown-mic.json  broken-radio.json  cheap-headset.json  deep-fried-mic.json  discord-packet-loss.json  drive-thru-speaker.json  fan-noise-hell.json  tin-can.json  underwater.json  xbox-360-lobby.json
src/lib/: ipc.ts  stores.ts
src/lib/components/: DeviceBar.svelte  DeviceStrip.svelte  EffectChain.svelte  EffectChainRow.svelte  EffectIcon.svelte  EffectParams.svelte  HotkeyConfig.svelte  Meter.svelte  MeterBar.svelte  PillToggle.svelte  PresetSidebar.svelte  RoutingHealthDot.svelte  SetupWizard.svelte  (+4 more)
(+12 files in other folders)
