[package]
name = "ratmic"
version = "0.0.2"
description = "Bad microphone simulator"
edition = "2021"
rust-version = "1.75"

[lib]
name = "ratmic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
directories = "5"
cpal = "0.15"
ringbuf = "0.4"
dasp = { version = "0.11", features = ["signal"] }
fastrand = "2"
log = "0.4"
env_logger = "0.11"
tauri-plugin-opener = "2.5.4"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
global-hotkey = "0.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
